# lab_pyxel_platformer

./: .gitignore  README.md  assets.pyxres  bullet.py  camera.py  coin.py  enemy.py  game.py  helpers.py  player.py  pyproject.toml  sprite.py  wall.py
