[tool.poetry]
name = "retro-testing"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyxel = "^2.3.10"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
